--- a/style.css
+++ b/style.css
@@ -39,3 +39,42 @@ header h2 {
   background: rgb(215, 215, 215);
   cursor: pointer;
 }
+.gallery-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: grey;
+  padding: 0.5rem 0rem;
+}
+.gallery-info a {
+  background: rgb(215, 215, 215);
+  padding: 0.5rem;
+  text-decoration: none;
+  color: white;
+}
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  padding: 2rem 0rem;
+  width: 80%;
+  margin: auto;
+  row-gap: 5rem;
+  column-gap: 3rem;
+}
+.gallery-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.nav-button {
+  min-height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.more {
+  border: none;
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
